# boomer_bot

./: CMakeLists.txt  daily_reminder.txt
include/: bot.hpp  types.hpp  utils.hpp
src/: bot.cpp  main.cpp
